# image-processor

./: CMakeLists.txt  image_processor.cpp  readme.md
unit_tests/: run_tests.cpp  test_filters.cpp  test_image.cpp  test_reading_writing.cpp
